Setting up flask-restful service and django orm database package

--- a/disapp_db/conf/disappdb.ini
+++ b/disapp_db/conf/disappdb.ini
@@ -1,7 +1,7 @@
 [supervisord]
-childlogdir = %(here)s/../../logs/
-logfile = %(here)s/../../logs/supervisord.log
-pidfile = /tmp/supervisord-disapp_service.pid
+childlogdir = %(here)s/../logs/
+logfile = %(here)s/../logs/supervisord.log
+pidfile = /tmp/supervisord-disappdb.pid
 logfile_maxbytes = 50MB
 logfile_backups=100
 nodaemon = false
@@ -18,20 +18,22 @@ strip_ansi = false
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [inet_http_server]
-port = 9006
+port = 9010
 
 [supervisorctl]
-serverurl = http://localhost:9006
+serverurl = http://localhost:9010
 
-[program:disappservice]
+[program:agrodb]
 directory=%(here)s/../conf
-command=gunicorn -c gunicorn.py service_app:app
+command=%(here)s/gunicorn_start
 autostart=true
 autorestart=true
-stdout_logfile=%(here)s/../../logs/disapp-stdout.log
-stderr_logfile=%(here)s/../../logs/disapp-stderr.log
+stdout_logfile=%(here)s/../logs/disappdb-stdout.log
+stderr_logfile=%(here)s/../logs/disappdb-stderr.log
 stdout_logfile_maxbytes=50MB
 stderr_logfile_maxbytes=50MB
 stdout_logfile_backups=100
 stderr_logfile_backups=100
-environment=PYTHONPATH=%(here)s/../../
+
+
+
