--- a/disapp_service/disapp_service/conf/disapp_service_nginx.conf
+++ b/disapp_service/disapp_service/conf/disapp_service_nginx.conf
@@ -3,17 +3,12 @@
 server {
     listen 80;
     server_name _;
-    access_log /var/log/nginx/userservice.access.log;
-    error_log /var/log/nginx/agrostar.error.log info;
+    access_log /var/log/nginx/disapp.access.log;
+    error_log /var/log/nginx/disapp.error.log info;
     proxy_set_header Host $http_host;
     client_max_body_size 100m;
     proxy_read_timeout 300;
     send_timeout 300;
-
-   location /static/ {
-   alias /root/agroapp_service/agroapp_service/static/;
-   }
-
 
     location / {
         proxy_pass http://localhost:7285;
