closed django connections

--- a/disapp_service/disapp_service/conf/disapp_service_nginx.conf
+++ b/disapp_service/disapp_service/conf/disapp_service_nginx.conf
@@ -1,5 +1,4 @@
 
-
 server {
     listen 80;
     server_name _;
@@ -9,6 +8,10 @@ server {
     client_max_body_size 100m;
     proxy_read_timeout 300;
     send_timeout 300;
+
+    location /wsdl/ {
+        alias /root/wsdl/;
+    }
 
     location / {
         proxy_pass http://localhost:7285;
