file permission changes and create api changes

--- a/disapp_service/disapp_service/conf/supervisord.ini
+++ b/disapp_service/disapp_service/conf/supervisord.ini
@@ -28,6 +28,7 @@ directory=%(here)s/../conf
 command=gunicorn -c gunicorn.py service_app:app
 autostart=true
 autorestart=true
+user=root
 stdout_logfile=%(here)s/../../logs/disapp-stdout.log
 stderr_logfile=%(here)s/../../logs/disapp-stderr.log
 stdout_logfile_maxbytes=50MB
